# 20240218_CVM_CiasAbertas_DFP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: extract.py  main.py
src/contracts/: dfp_cia_aberta_20XX.py  schema_dfp_cia_aberta_BPP.py  schema_dfp_cia_aberta_DFC_MD.py  schema_dfp_cia_aberta_DFC_MI.py  schema_dfp_cia_aberta_DMPL.py  schema_dfp_cia_aberta_DRA.py  schema_dfp_cia_aberta_DRE.py  schema_dfp_cia_aberta_DVA.py  schema_dfp_cia_aberta_parecer.py
src/modules/: data_quality.py  extract.py  ingestion.py
