[tool.poetry]
name = "20240218-cvm-ciasabertas-dfp"
version = "0.1.0"
description = "Coleta de dados da CVM, referente as DFPs das Cias Abertas."
authors = ["ylder <yldebran.santana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pipdeptree = "^2.16.2"
requests = "^2.31.0"
pydantic = "^2.6.4"
pandas = "^2.2.1"
numpy = "1.26.4"
duckdb = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
